@@ -52,7 +52,6 @@ struct SERVER_EXPORT JackServerGlobals
                      int time_out_ms,
                      int rt,
                      int priority,
-                     int loopback,
                      int verbose,
                     jack_timer_type_t clock);
     static void Stop();
